린트 수정