@@ -1,8 +1,8 @@
 package app.foodylab.payment;
 
 import app.foodylab.OrderFixture;
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.DisplayName;
@@ -10,8 +10,8 @@ import org.junit.jupiter.api.Test;
 
 class PayServiceTest {
 
-    private static KakaoPaySpy kakaoPay = new KakaoPaySpy();
-    private static final PayService payService = new PayService(Arrays.asList(kakaoPay));
+    private static final KakaoPaySpy kakaoPay = new KakaoPaySpy();
+    private static final PayService payService = new PayService(List.of(kakaoPay));
 
     @BeforeAll
     static void init() {
